bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: not found: value dance
dance = true
^BDR2:4: error: not found: value dance
while(dance==true){
      ^BDR2:27: error: not found: value dance
    case _ => dance=false;
              ^